--- a/20201013122519-org_mode.org
+++ b/20201013122519-org_mode.org
@@ -1,1 +1,6 @@
 #+title: Org-Mode
+
+- tags :: [[file:20201015022553-doom_emacs.org][Doom Emacs]]
+
+* Org-journal
+- Source :: https://github.com/bastibe/org-journal
